manifests/deployment-development.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: adminportaldevelopment 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminportaldevelopment
  template:
    metadata:
      labels:
        app: adminportaldevelopment 
    spec:
      containers:
        - name: adminportaldevelopment 
          image: containerregistrymwsdevelopment.azurecr.io/adminportaldevelopment
          ports:
          - containerPort: 80
