manifests/deployment-staging.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: mwsadminportalstaging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mwsadminportalstaging
  template:
    metadata:
      labels:
        app: mwsadminportalstaging
    spec:
      containers:
        - name: mwsadminportalstaging
          image: containerregistrymwsstaging.azurecr.io/mwsadminportalstaging
          ports:
          - containerPort: 80
