manifests/service-development.yml
apiVersion: v1
kind: Service
metadata:
    name: mwsadminportaldevelopment
spec:
    type: NodePort
    selector:
        app: mwsadminportaldevelopment
    ports:
        - protocol: TCP
          port: 80
          targetPort: 80
