manifests/service-production.yml
apiVersion: v1
kind: Service
metadata:
    name: mwsadminportalproduction
spec:
    type: NodePort
    selector:
        app: mwsadminportalproduction
    ports:
        - protocol: TCP
          port: 80
          targetPort: 3000
