manifests/service-staging.yml
apiVersion: v1
kind: Service
metadata:
    name: mwsadminportalstaging
spec:
    type: NodePort
    selector:
        app: mwsadminportalstaging
    ports:
        - protocol: TCP
          port: 80
          targetPort: 80
