manifests/ingress-production.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: adminportal-production-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"

spec:
  tls:
    - hosts:
        - admin.matchwornshirt.com
      secretName: adminportal-production-tls
  rules:
    - host: admin.matchwornshirt.com
      http:
        paths:
          - path: /
            backend:
              serviceName: mwsadminportalproduction
              servicePort: 80
