manifests/ingress-staging.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: adminportal-staging-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"

spec:
  tls:
    - hosts:
        - admin-staging.matchwornshirt.com
      secretName: adminportal-staging-tls
  rules:
    - host: admin-staging.matchwornshirt.com
      http:
        paths:
          - path: /
            backend:
              serviceName: mwsadminportalstaging
              servicePort: 80
